add get roulette resources from host