@@ -1,6 +1,5 @@
 package com.liverussia.utils;
 
-import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.StringUtils;
 
@@ -8,42 +7,24 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.util.Base64;
 
 public class Base64Converter {
-
-
-
-//    public static String convertBase64ToPdf(ApproveDiseaseRequest request) throws IOException {
+//    public static String encodeFileToBase64(File file) {
 //
-//        String dataDir = "/Users/ivanlikhvatov/Downloads/";
+//        byte[] encoded;
 //
-//        String base64 = request.getScannedCertificate();
-//        String base64ImageString = base64.replace("data:application/pdf;base64,", "");
-//        byte[] imageBytes = javax.xml.bind.DatatypeConverter.parseBase64Binary(base64ImageString);
-//
-//        String path = dataDir + "Base64_to_Pdf.pdf";
-//
-//        try (FileOutputStream fos = new FileOutputStream(path)) {
-//            fos.write(imageBytes);
+//        try{
+//            encoded = Base64.encodeBase64(FileUtils.readFileToByteArray(file));
+//        } catch (IOException e) {
+//            e.printStackTrace();
+//            return StringUtils.EMPTY;
 //        }
 //
-//        return null;
-//
-//
+//        return new String(encoded, StandardCharsets.US_ASCII);
 //    }
 
-    public static String encodeFileToBase64(String path) {
-        File file = new File(path);
-
-        byte[] encoded;
-
-        try{
-            encoded = Base64.encodeBase64(FileUtils.readFileToByteArray(file));
-        } catch (IOException e) {
-            e.printStackTrace();
-            return StringUtils.EMPTY;
-        }
-
-        return new String(encoded, StandardCharsets.US_ASCII);
+    public static String encodeFileToBase64(byte[] file) {
+        return Base64.getEncoder().encodeToString(file);
     }
 }
